Reportes Detalle Ingreso Comunidad

--- a/ProyectoFinalKermesse/ProyectoFinalKermesse.csproj
+++ b/ProyectoFinalKermesse/ProyectoFinalKermesse.csproj
@@ -494,6 +494,8 @@
     <Content Include="Views\RolUsuarios\VerReporteRolUsuarioDetalle.cshtml" />
     <Content Include="Views\Comunidads\VerReporteComunidad.cshtml" />
     <Content Include="Views\Comunidads\VerReporteComunidadDetalle.cshtml" />
+    <Content Include="Views\IngresoComunidadDets\VerReporteIngresoComunidadDet.cshtml" />
+    <Content Include="Views\IngresoComunidadDets\VerReporteIngresoComunidadDetDetalle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
